syntax = "proto3";

package com.hmproductions.bingo.actions;

message UnsubscribeRequest {
    uint32 player_id = 1;
    uint32 room_id = 2;
}

message UnsubscribeResponse {

    enum StatusCode {
        OK = 0;
        NOT_SUBSCRIBED = 1;
        INTERNAL_SERVER_ERROR = 2;
    }

    StatusCode status_code = 1;
    string status_message = 2;
}
